special handling for homepage path

--- a/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
@@ -69,7 +69,7 @@
 									url.setPort(80);
 									// check titlePath
 									var tpm = db().getAttribute(WGA.getCore().DBATTRIB_TITLEPATHMANAGER);
-									if(tpm){
+									if(tpm && url.getPath()!="/"){
 										var langChooser = new Packages.de.innovationgate.wgpublisher.lang.WebTMLLanguageChooser(db(), this)
 										var path = tpm.buildTitlePath(content(), "html", langChooser); 
 										url.setPath("/" + path.toArray().join("/"));
