--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
@@ -109,7 +109,7 @@
 	<img src="<tml:item name="_url"/>"
 		title="<tml:script expression="_img_title || option('title')"/>"
 		alt="<tml:script expression="_img_title || option('title')"/>"
-		<tml:case isfilled="_srcset">
+		<tml:case condition="_srcset">
 			srcset="<tml:item name="_srcset"/>"
 		</tml:case>
 		<tml:case condition="_url_mo">
