Improved SEO to use fresh requested page with $clean parameter

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/w3c-validation.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/w3c-validation.tml
@@ -36,7 +36,7 @@
 		    return $('<span>').text(input).html().trim().replace(/\"/g, "'");
 		}
 
-		$.get(win.location, function(data){
+		$.get(win.location + "?$clean", function(data){
 
 			$("#seo-w3c").html("Warte auf Antwort ...");
 			
