--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/css.tml
@@ -23,6 +23,8 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
+<tml:include medium="stylesheets" ref="cmm-styles"/>
+
 <tml:include designdb="@afw" medium="jss" ref="toCSS" o_scope=".content-modules .content-box">
 	"&.box > .title": {
 		color: "white",
