--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/pages/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/pages/css.tml
@@ -23,6 +23,8 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
+<tml:include medium="stylesheets" ref="cmm-styles"/>
+
 .module-cm_pages .paging-toolbar{
 	margin-top: 10px;
 	padding: 5px;
