#00004785: plugin-management: approval workflow stopped working in wga 7.3 beta

--- a/OpenWGA/plugins/management/design/tml/html/approval/action.tml
+++ b/OpenWGA/plugins/management/design/tml/html/approval/action.tml
@@ -31,7 +31,7 @@ callAction("::initPage");
 		
 		<html>
 			<head>
-				<tml:htmlhead scripts="calendar"/>
+				<tml:htmlhead/>
 				<link rel="stylesheet" href="<tml:url type="css" doc="main"/>"/>
 			</head>
 			<body>
