--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/render.tml
@@ -22,33 +22,26 @@
 ## along with OpenWGA in file COPYING.
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
-<div class="content-box <tml:script expression="CMM.setting('style')||'box'"/>" <tml:case hasoption="sections-style">style="<tml:option name="sections-style"/>"</tml:case>>
-	<tml:case condition="CMM.setting('show_title')=='show'">
-		<div class="title">
-			<tml:if condition="CMM.setting('url')">
-				<tml:then>
-					<tml:if context="[docid:{CMM.setting('url')}]" iscontextvalid="true">
-						<tml:then><a href="<tml:url/>" title="<tml:meta name="title"/>"><tml:option name="title"/></a></tml:then>
-						<tml:else>
-							<a href="<tml:[setting] o_name="url"/>" title="<tml:[setting] o_name="url"/>">
-								<tml:option name="title"/>
-							</a>
-						</tml:else>
-					</tml:if>
-				</tml:then>
-				<tml:else><tml:option name="title"/></tml:else>
-			</tml:if>
-		</div>
-	</tml:case>
-	<div class="content" style="padding:<tml:[setting] o_name="padding"/>;
-			<tml:case condition="CMM.setting('fixed_height')">
-				height:<tml:script expression="CMM.setting('height')"/>;
-				overflow-y:hidden;
-			</tml:case>
-			<tml:case condition="CMM.setting('image')">
-				background-image: url('<tml:url file="{CMM.setting('image')}"/>');
-			</tml:case>
-		">
+
+<div class="content-box <tml:item name="$mc.style"/>" <tml:case hasoptions="sections-style">style="<tml:option name="sections-style"/>"</tml:case>>
+
+	<tml:{div} if="$mc.showTitle" html_class="title">
+		<tml:if condition="CMM.setting('url')">
+			<tml:then>
+				<tml:if context="[docid:{CMM.setting('url')}]" iscontextvalid="true">
+					<tml:then><a href="<tml:url/>" title="<tml:meta name="title"/>"><tml:option name="title"/></a></tml:then>
+					<tml:else>
+						<a href="<tml:[setting] o_name="url"/>" title="<tml:[setting] o_name="url"/>">
+							<tml:option name="title"/>
+						</a>
+					</tml:else>
+				</tml:if>
+			</tml:then>
+			<tml:else><tml:option name="title"/></tml:else>
+		</tml:if>
+	</tml:{div}>
+
+	<div class="content" style="<tml:item name="$mc.styles"/>">
 		<tml:include ref="system:include-child-modules">
 			<tml:option name="margins" expression="true" scope="local"/>
 		</tml:include>
