#00004787: Allow copy images from image-clipboard for chief-editors

--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/attachments/mode-view.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/attachments/mode-view.tml
@@ -94,7 +94,7 @@
 
 				<tml:include ref="::toolbar-top"/>
 							
-				<tml:case condition="AFW.request().HTML5DragDropSupported && STATUS==content().STATUS_DRAFT">
+				<tml:case condition="AFW.request().HTML5DragDropSupported && _mode=='edit'">
 					// Drop handler from other image panels:
 					Ext.get("form-attachments").on({
 						dragover: function(e){
