--- a/OpenWGA/plugins/cm/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/mod-contentstore.tml
@@ -35,7 +35,7 @@
 	request.getSession().setAttribute(WGACore.ATTRIB_BI_VERSION4, true);
 	
 	request.getSession().setAttribute(wgacore.ATTRIB_NO_CONTENT_NOTIFCATION_URL, "/"+meta("db", "dbkey")+"/html/cms:no-content.int.html?dbkey=#DBKEY#&structkey=#KEY#");
-	request.getSession().setAttribute(wgacore.ATTRIB_VIRTUAL_CONTENT_URL, "/"+meta("db", "dbkey")+"/html/cms:virtual-doc.int.html?contentkey=#CONTENTKEY_UNIQUE_MODE#&u=#CONTENTKEY_URL_MODE#&structkey=#STRUCTKEY#&dbkey=#DBKEY#");
+	request.getSession().setAttribute(wgacore.ATTRIB_VIRTUAL_CONTENT_URL, "/"+meta("db", "dbkey")+"/html/cms:virtual-doc.int.html?contentkey=#CONTENTKEY_UNIQUE_MODE#&structkey=#STRUCTKEY#&dbkey=#DBKEY#");
 
 	var dbkeys = request.getSession().getAttribute(Packages.de.innovationgate.contentmanager.filter.ResourceAccessFilter.SESSION_ATTRIB_EDITABLE_DATABASE);
 	if(!dbkeys)
