#00004780: Sort jobs and web applications

--- a/OpenWGA/plugins/admin/design/tml/html/jobs/mod-joblist.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/jobs/mod-joblist.tml
@@ -26,12 +26,13 @@
 	_jobs = WGA.createList();
 	_jobs.addAll(DBM.jobs().getAll());
 	_jobs = WGA.sortList(_jobs, function(a,b){
-	
 		var sortA = (a.config ? 1 : a.transient ? 2 : 3);
 		var sortB = (b.config ? 1 : b.transient ? 2 : 3);
-		return (sortA - sortB);
 		
-	
+		if(sortA==sortB)
+			return a.name < b.name ? -1 : 1;
+		
+		return sortA < sortB ? -1 : 1;
 	})
 </tml:script>
 
