--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/projects-by-dbserver-iconview.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/projects-by-dbserver-iconview.tml
@@ -60,6 +60,9 @@
 		
 		<tml:script>
 			_dbs = DBM.wgaconfig.getDatabases(_server.uid, null, option("dbtype"))
+			_dbs = sortList(_dbs, function(a,b){
+				return a.key > b.key ? 1 : -1
+			})
 		</tml:script>
 
 		<tml:if condition="_dbs.isEmpty()">
