--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
@@ -76,7 +76,24 @@
 	</tml:case>
 
 </fieldset>
-	
+
+<tml:script>
+	_hasRobotsTxt=false;
+	for(let el in Iterator(_config_bean.virtualResources)){
+		if(el.name.toLowerCase()=="robots.txt"){
+			_hasRobotsTxt=true;
+			break;
+		}
+	}
+</tml:script>
+
+<tml:case isfalse="_hasRobotsTxt">
+	<fieldset>
+		<legend>Robots</legend>
+		<tml:[system:fs-input] o_field="robotsTxt" o_type="textarea" o_width="350"/>
+	</fieldset>
+</tml:case>
+
 <div id="v-resources-array-list" class="array-list-editor">			
 	<fieldset>
 		<legend>Virtual Resources</legend>
