#00004799: Added restriction to admin- and authoring apps to v-host config

--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/mode-edit.tml
@@ -16,12 +16,12 @@
 
 		host.allowedDatabases.clear();
 		if(tmlform.allowedDbsOption=="all")
-			host.allowedDatabases = createlist(["$all"]);
+			host.allowedDatabases = WGA.createList(["$all"]);
 		else if(tmlform.allowedDbsOption=="select")
 			host.allowedDatabases.addAll(tmlform.fieldlist("allowedDatabases"));		
 		else if(tmlform.allowedDbsOption=="none")
 			host.defaultDatabase="";
-						
+
 		host.virtualResources.clear();
 		host.virtualResources.addAll(vr);
 
