--- a/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/v-hosts/v-host/form.tml
@@ -77,6 +77,12 @@
 
 </fieldset>
 
+<fieldset>
+	<legend>Restrictions</legend>
+	<tml:[system:fs-input] o_field="allowAdminApps" o_type="boolean"/>
+	<tml:[system:fs-input] o_field="allowAuthoringApps" o_type="boolean"/>
+</fieldset>	
+
 <tml:script>
 	_hasRobotsTxt=false;
 	for(let el in Iterator(_config_bean.virtualResources)){
