#00004808: Usage of @cmm:util/select-file throws error "design not found"

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/userdefined-metas.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/userdefined-metas.tml
@@ -49,7 +49,9 @@
 				<hr size="1">
 			</tml:case>		
 		
-			<tml:include ref="{_Content.getUserdefinedMetasTML()}" designdb="{option('dbkey')}"/>
+			<tml:include ref="{_Content.getUserdefinedMetasTML()}" designdb="{option('dbkey')}">
+				<tml:option name="cm_dbkey" expression="context('main').meta('db', 'dbkey')"/>
+			</tml:include>
 		
 			<script>
 				<tml:case condition="option('mode')=='view'">
