added fallback to plugin-contentmanager

--- a/OpenWGA/plugins/cm-modules/design/tml/html/util/select-file.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/util/select-file.tml
@@ -23,4 +23,4 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
-<tml:include designdb="{option('cm_dbkey')}" ref="util:select-file"/>
+<tml:include designdb="{option('cm_dbkey')||'plugin-contentmanager}" ref="util:select-file"/>
